add layout project 2
divide layout for project 2

--- a/Intermediate-html-css/project-2/index.html
+++ b/Intermediate-html-css/project-2/index.html
@@ -4,8 +4,96 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="resource/reset-css.css" />
+    <link
+      rel="stylesheet"
+      href="resource/font-awesome-4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="resource/style.css" />
     <title>Admin Dashboard</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <!-- side bar -->
+      <div class="container-left-section">
+        <div class="list-item">
+          <i class="fa fa-th-large" aria-hidden="true"></i>
+          <h1>Dashboard</h1>
+        </div>
+        <div class="list-item">
+          <i class="fa fa-home" aria-hidden="true"></i>
+          <h3>Home</h3>
+        </div>
+        <div class="list-item">
+          <i class="fa fa-id-card-o" aria-hidden="true"></i>
+          <h3>Profile</h3>
+        </div>
+        <div class="list-item">
+          <i class="fa fa-comment-o" aria-hidden="true"></i>
+          <h3>Messages</h3>
+        </div>
+        <div class="list-item">
+          <i class="fa fa-clock-o" aria-hidden="true"></i>
+          <h3>History</h3>
+        </div>
+        <div class="list-item">
+          <i class="fa fa-tasks" aria-hidden="true"></i>
+          <h3>Tasks</h3>
+        </div>
+        <div class="list-item">
+          <i class="fa fa-users" aria-hidden="true"></i>
+          <h3>Communities</h3>
+        </div>
+        <div class="list-item">
+          <i class="fa fa-cog" aria-hidden="true"></i>
+          <h3>Settings</h3>
+        </div>
+        <div class="list-item">
+          <i class="fa fa-question-circle" aria-hidden="true"></i>
+          <h3>Support</h3>
+        </div>
+        <div class="list-item">
+          <i class="fa fa-shield" aria-hidden="true"></i>
+          <h3>Privacy</h3>
+        </div>
+      </div>
+      <!-- content section -->
+      <div class="container-right-section">
+        <!-- header -->
+        <div class="header">
+          <!-- first row -->
+          <div class="header-first-row">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <input type="text" />
+            <i class="fa fa-bell" aria-hidden="true"></i>
+            <img src="resource/images/0D5A6154 3x4.jpg" alt="avatar" />
+            <p>Duc Le</p>
+          </div>
+          <!-- second row -->
+          <div class="header-second-row">
+            <img src="resource/images/0D5A6154 3x4.jpg" alt="avatar" />
+            <div class="user-profile">
+              <p>Hi there,</p>
+              <p>Duc Le(@ducle)</p>
+            </div>
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+          </div>
+        </div>
+        <!-- main content -->
+        <div class="content">
+          <div class="grid-container">
+            <div class="grid-item" id="card">1</div>
+            <div class="grid-item" id="card">2</div>
+            <div class="grid-item" id="big-card">3</div>
+            <div class="grid-item" id="card">4</div>
+            <div class="grid-item" id="card">5</div>
+            <div class="grid-item" id="big-card">6</div>
+            <div class="grid-item" id="card">7</div>
+            <div class="grid-item">8</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
