add header and footer to project
advance html/css section

--- a/Advanced HTML and CSS/project/index.html
+++ b/Advanced HTML and CSS/project/index.html
@@ -9,8 +9,66 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="assets/font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header>
+        <div class="header-background"></div>
+        <div class="profile">
+          <div class="profile-image">
+            <img
+              src="assets/images/pexels-keval-padhiyar-245700856-19915666.jpg"
+              alt="me"
+            />
+            <div class="profile-name"><h4>Bruce Wayne</h4></div>
+          </div>
+          <div class="about">
+            <h3>About me</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+              laborum laboriosam saepe dolores dolore quisquam impedit. Fugit
+              possimus culpa excepturi! Molestiae explicabo impedit libero
+              cumque pariatur natus, soluta nulla doloribus?
+            </p>
+            <div class="icon-group">
+              <i class="devicon-github-original" id="icon"></i>
+              <i class="devicon-linkedin-plain" id="icon"></i>
+              <i class="devicon-twitter-original" id="icon"></i>
+            </div>
+          </div>
+        </div>
+      </header>
+      <main></main>
+      <footer>
+        <div class="contact">
+          <h3>Contact me</h3>
+          <p>
+            Please get in touch if you think our work could be mutually
+            beneficial!
+          </p>
+          <p>1234 Random Road</p>
+          <p>Random Town, California 12345</p>
+          <i class="fa fa-phone"> (+84) 327079634</i>
+          <i class="fa fa-envelope-o" aria-hidden="true">
+            Work.duclt@gmail.com</i
+          >
+          <div class="icon-group">
+            <i class="devicon-github-original" id="icon"></i>
+            <i class="devicon-linkedin-plain" id="icon"></i>
+            <i class="devicon-twitter-original" id="icon"></i>
+          </div>
+        </div>
+        <img
+          src="assets/images/pexels-haroon-iqbal-443955732-16873255.jpg"
+          alt=""
+        />
+      </footer>
+    </div>
+  </body>
 </html>
