finish desktop ui for project
advance html/css

--- a/Advanced HTML and CSS/project/index.html
+++ b/Advanced HTML and CSS/project/index.html
@@ -44,7 +44,172 @@
           </div>
         </div>
       </header>
-      <main></main>
+      <main>
+        <div class="grid-container">
+          <div class="grid-item">
+            <div class="card">
+              <img src="assets/images/pexels-pixabay-270408.jpg" alt="" />
+              <div class="card-content">
+                <div class="card-content-first-row">
+                  <h4>Project Name</h4>
+                  <div id="icon-group">
+                    <i
+                      class="devicon-github-original"
+                      id="icon"
+                      aria-hidden="true"
+                    ></i>
+                    <i
+                      class="fa fa-share-square-o"
+                      aria-hidden="true"
+                      id="share-icon"
+                    ></i>
+                  </div>
+                </div>
+                <p>
+                  Short description of the project. Just a couple senetences
+                  will do.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="card">
+              <img src="assets/images/pexels-pixabay-270408.jpg" alt="" />
+              <div class="card-content">
+                <div class="card-content-first-row">
+                  <h4>Project Name</h4>
+                  <div id="icon-group">
+                    <i
+                      class="devicon-github-original"
+                      id="icon"
+                      aria-hidden="true"
+                    ></i>
+                    <i
+                      class="fa fa-share-square-o"
+                      aria-hidden="true"
+                      id="share-icon"
+                    ></i>
+                  </div>
+                </div>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Provident dicta a ipsa, aliquam maxime porro! Quae laborum,
+                  enim consequuntur perspiciatis, alias atque quisquam nemo
+                  tempore sequi soluta commodi aperiam voluptate. Lorem ipsum
+                  dolor, sit amet consectetur adipisicing elit. Culpa dolor,
+                  maxime provident hic cum laborum sequi dolorem architecto
+                  commodi pariatur illum exercitationem doloremque omnis
+                  molestias iusto non optio animi laudantium.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="card">
+              <img src="assets/images/pexels-pixabay-270408.jpg" alt="" />
+              <div class="card-content">
+                <div class="card-content-first-row">
+                  <h4>Project Name</h4>
+                  <div id="icon-group">
+                    <i
+                      class="devicon-github-original"
+                      id="icon"
+                      aria-hidden="true"
+                    ></i>
+                    <i
+                      class="fa fa-share-square-o"
+                      aria-hidden="true"
+                      id="share-icon"
+                    ></i>
+                  </div>
+                </div>
+                <p>
+                  Short description of the project. Just a couple senetences
+                  will do.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="card">
+              <img src="assets/images/pexels-pixabay-270408.jpg" alt="" />
+              <div class="card-content">
+                <div class="card-content-first-row">
+                  <h4>Project Name</h4>
+                  <div id="icon-group">
+                    <i
+                      class="devicon-github-original"
+                      id="icon"
+                      aria-hidden="true"
+                    ></i>
+                    <i
+                      class="fa fa-share-square-o"
+                      aria-hidden="true"
+                      id="share-icon"
+                    ></i>
+                  </div>
+                </div>
+                <p>
+                  Short description of the project. Just a couple senetences
+                  will do.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="card">
+              <img src="assets/images/pexels-pixabay-270408.jpg" alt="" />
+              <div class="card-content">
+                <div class="card-content-first-row">
+                  <h4>Project Name</h4>
+                  <div id="icon-group">
+                    <i
+                      class="devicon-github-original"
+                      id="icon"
+                      aria-hidden="true"
+                    ></i>
+                    <i
+                      class="fa fa-share-square-o"
+                      aria-hidden="true"
+                      id="share-icon"
+                    ></i>
+                  </div>
+                </div>
+                <p>
+                  Short description of the project. Just a couple senetences
+                  will do.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="card">
+              <img src="assets/images/pexels-pixabay-270408.jpg" alt="" />
+              <div class="card-content">
+                <div class="card-content-first-row">
+                  <h4>Project Name</h4>
+                  <div id="icon-group">
+                    <i
+                      class="devicon-github-original"
+                      id="icon"
+                      aria-hidden="true"
+                    ></i>
+                    <i
+                      class="fa fa-share-square-o"
+                      aria-hidden="true"
+                      id="share-icon"
+                    ></i>
+                  </div>
+                </div>
+                <p>
+                  Short description of the project. Just a couple senetences
+                  will do.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
       <footer>
         <div class="contact">
           <h3>Contact me</h3>
